# matrix_opencl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matrix.h
.github/workflows/: ci.yml
src/: matmul.cl  matrix.cpp  matrix.h
tests/: test_matrix.cpp
